feat: i18n full implementation

--- a/resources/locales/en.json
+++ b/resources/locales/en.json
@@ -1,1 +1,1 @@
-{"login":{"email":"Email","password ":"Password","remember-me":"Remember me","forget-password":"Forget password","login":"Login","welcome":"Welcome"}}
+{"login":{"email":"Email","password":"Password","remember-me":"Remember me","forget-password":"Forget password","login":"Login","welcome":"Welcome"},"footer":{"developed-by":"Developed by"},"actions":{"access":"Access"}}
