--- a/resources/locales/es.json
+++ b/resources/locales/es.json
@@ -1,1 +1,1 @@
-{"login":{"email":"Correo","password ":"Contraseña","remember-me":"Recuerdame","forget-password":"Olvidaste tu contraseña","login":"Iniciar sesión","welcome":"Bienvenido"}}
+{"login":{"email":"Correo","password":"Contraseña","remember-me":"Recuérdame","forget-password":"Olvidaste tu contraseña","login":"Iniciar sesión","welcome":"Bienvenido"},"footer":{"developed-by":"Desarrollado por"},"actions":{"access":"Acceder"}}
