style: registro de estudiantes key

--- a/resources/locales/en.json
+++ b/resources/locales/en.json
@@ -1,25 +1,1 @@
-{
-    "entities": { "exercise": "Exercise" },
-    "actions": {
-        "access": "Access",
-        "filter": "Filter",
-        "create": "Create",
-        "search": "Search",
-        "reset": "Reset",
-        "previous": "Previous",
-        "next": "Next"
-    },
-    "footer": { "developed-by": "Developed by" },
-    "exercises": { "name": "Name" },
-    "login": {
-        "email": "Email",
-        "password": "Password",
-        "remember-me": "Remember me",
-        "forget-password": "Forget password",
-        "login": "Login",
-        "welcome": "Welcome"
-    },
-    "register": {
-        "title": "Student Register"
-    }
-}
+{"entities":{"exercise":"Exercise","exercises":"Exercises"},"register":{"title":"Student Register"},"actions":{"access":"Access","filter":"Filter","create":"Create","search":"Search","reset":"Reset","previous":"Previous","next":"Next"},"footer":{"developed-by":"Developed by"},"exercises":{"name":"Name"},"login":{"email":"Email","password":"Password","remember-me":"Remember me","forget-password":"Forget password","login":"Login","welcome":"Welcome"}}
