--- a/resources/locales/es.json
+++ b/resources/locales/es.json
@@ -1,22 +1,1 @@
-{
-    "entities": { "exercise": "Ejercicio" },
-    "actions": {
-        "access": "Acceder",
-        "filter": "Filtrar",
-        "create": "Crear",
-        "search": "Buscar",
-        "reset": "Reiniciar",
-        "previous": "Anterior",
-        "next": "Siguiente"
-    },
-    "footer": { "developed-by": "Desarrollado por" },
-    "exercises": { "name": "Nombre" },
-    "login": {
-        "email": "Correo",
-        "password": "Contraseña",
-        "remember-me": "Recuérdame",
-        "forget-password": "Olvidaste tu contraseña",
-        "login": "Iniciar sesión",
-        "welcome": "Bienvenido"
-    }
-}
+{"entities":{"exercise":"Ejercicio","exercises":"Ejercicios"},"register":{"title":"Registro de estudiantes"},"actions":{"access":"Acceder","filter":"Filtrar","create":"Crear","search":"Buscar","reset":"Reiniciar","previous":"Anterior","next":"Siguiente"},"footer":{"developed-by":"Desarrollado por"},"exercises":{"name":"Nombre"},"login":{"email":"Correo","password":"Contraseña","remember-me":"Recuérdame","forget-password":"Olvidaste tu contraseña","login":"Iniciar sesión","welcome":"Bienvenido"}}
